--- a/ChurchManager2Web/src/index.html
+++ b/ChurchManager2Web/src/index.html
@@ -14,7 +14,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
 </head>
-  <body class="hold-transition sidebar-mini sidebar-open mat-typography">
+  <!-- <body class="hold-transition sidebar-mini sidebar-open mat-typography"> -->
+    <body class="hold-transition sidebar-mini sidebar-open mat-typography">
     <app-root></app-root>
   </body>
 </html>
